# pen-tester-cli

./: .gitignore  CLAUDE.md  LICENSE.md  README.md  garak-requirements.txt  publish.sh  pyproject.toml  requirements.txt
.claude/: CLAUDE.md
.claude/skills/commit_message/: SKILL.md
.claude/skills/pr/: SKILL.md
.claude/skills/validate/: SKILL.md
.github/: pull_request_template.md
.github/workflows/: pipeline.yml
docs/: architecture.md  configuration.md  development.md  environment.md  logging.md  promptfoo.md  publish.md  reporting.md  scanner.md
docs/auditors/: garak.md  inspect_ai.md  pyrit.md  venv.md
docs/user-guide/: 01-getting-started.md  02-concepts.md  03-full-run.md  04-env-examples.md  README.md  concepts.md  env-examples.md  full-run.md  getting-started.md  troubleshooting.md
output/: detailed_report.html  detailed_report.md
src/: .env.example  configuration_sample.py  main.example.py  main.py  requirements.txt  sample.py  summary.md
src/examples/: main.py  run_garak.py  run_promptfoo.py  run_pyrit.py  run_scanner.py  run_scanner_generator.py  run_scanner_target.py
src/pentester/: __init__.py  __main__.py  dev.py  handler.py  main.py  orchestrator.py
src/pentester/auditors/: auditor_factory.py  garak.py  promptfoo.py  promptfoo_auditor.py  pyrit.py  venv.py
src/pentester/auditors/garak/: auditor.py  scanner_generator.py
src/pentester/auditors/inspect_ai/: __init__.py  _constants.py  auditor.py  bypass_scorer.py  fence_scorer.py  scanner_model.py
src/pentester/auditors/models/: __init__.py  audit_result.py  base_auditor.py  probe_result.py
src/pentester/auditors/promptfoo/: __init__.py  auditor.py  collector.py  config_manager.py  http_provider.py  runner.py
src/pentester/auditors/pyrit/: auditor.py  scanner_target.py
src/pentester/config/: __init__.py  auditor_settings.py  llm.py  logging.py  reporting.py  scanner.py  settings.py
src/pentester/config/auditors/: garak_settings.py  inspect_settings.py  promptfoo_settings.py  pyrit_settings.py
src/pentester/enums/: attack_strategy.py  auditor_key.py  prompt_type.py  promptfoo_strategy.py  target_type.py
src/pentester/probes/: garak_probe.py  inspect_ai_probe.py  probe_factory.py  scan_result.py
src/pentester/probes/models/: __init__.py  base_probe.py  probe_result.py
src/pentester/reporting/: __init__.py  reporting.py
src/pentester/reporting/enum/: __init__.py  generator_extension.py  generator_key.py
src/pentester/reporting/generators/: __init__.py  base_generator.py  csv_generator.py  html_generator.py  (+4 more)
src/pentester/scanners/: README.md  exceptions.py  scanner.py
src/pentester/utils/: timer.py
tests/: test_main.py  test_orchestrator.py
tests/auditors/: test_auditor_factory.py  test_garak.py  test_pyrit.py  test_venv.py
tests/auditors/garak/: test_scanner_generator.py
tests/auditors/inspect_ai/: conftest.py  test_auditor.py  test_bypass_scorer.py  test_fence_scorer.py  test_scanner_model.py
tests/auditors/models/: test_audit_result.py  test_base_auditor.py  test_probe_result.py
tests/auditors/promptfoo/: test_assert.py  test_auditor.py  test_collector.py  test_config_manager.py  test_http_provider.py  test_runner.py
tests/auditors/pyrit/: test_scanner_target.py
tests/config/: test_llm_settings.py  test_logging.py  test_reporting_settings.py  test_scanner_settings.py  test_settings.py
tests/config/auditors/: test_garak_settings.py  test_inspect_settings.py  test_promptfoo_settings.py  test_pyrit_settings.py
tests/enums/: test_auditor_key.py  test_prompt_type.py  test_promptfoo_strategy.py  test_target_type.py
tests/probes/models/: test_probe_result.py
tests/reporting/: test_reporting.py  test_summary.py
tests/reporting/enum/: test_generator_extension.py  test_generator_key.py
tests/reporting/generators/: test_base_generator.py  test_csv_generator.py  test_generator_factory.py  test_html_generator.py  test_mako_generator.py  test_markdown_generator.py  test_pdf_generator.py
tests/reporting/models/: test_summary_result.py
tests/scanner/: test_custom_handler_loader.py  test_scanner.py
tests/scanner/models/: test_target_response.py
tests/scanner/request_handlers/: test_custom_handler.py
tests/scanner/response_serializers/: test_json_dot_serializer.py
tests/utils/: test_timer.py
(+31 files in other folders)
